# Preqin_topic_analysis

./: README.md  config.example.yaml  pyproject.toml  requirements.txt
data/: README.md  sample_schema.csv
notebooks/: 01-DMR_topic_modeling(Preqin_C)_260311.ipynb
src/preqin_topic_modeling/: __init__.py  data.py  extract_sentences.py  train_dmr.py
